- Moved all the mime_magic.c specific stuff into their own header file   to prevent possible compile failures.

# Should fix bug #26103


git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@143727 c90b9560-bf6c-de11-be94-00142212c4b1