ext/mime_magic/mime_magic.dsp
@@ -103,6 +103,10 @@ SOURCE=.\mime_magic.c
 
 SOURCE=.\php_mime_magic.h
 # End Source File
+# Begin Source File
+
+SOURCE=.\phpmimemagic.h
+# End Source File
 # End Group
 # End Target
 # End Project
